Bug 124693 - Crash when modifying chart data range with mouse selection
Summary: Crash when modifying chart data range with mouse selection
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: haveBacktrace, needUITest, regression
Depends on:
Blocks: Chart-Data
  Show dependency treegraph
 
Reported: 2019-04-11 17:57 UTC by Buovjaga
Modified: 2019-04-26 08:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODS with chart (13.58 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-04-11 17:57 UTC, Buovjaga
Details
Backtrace of crash (31.10 KB, text/plain)
2019-04-12 15:59 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2019-04-11 17:57:55 UTC
Created attachment 150704 [details]
Example ODS with chart

1. Open attached file on Linux
2. Double-click chart
3. Right-click - Data ranges
4. Click the "Select data ranges" button to the right of the Data range input field
5. Paint B1:B5 with your mouse

Affects all VCL backends, but not Windows.

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 37aa4f0d64e276c46821ef6122483fb6b4c04781
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 11 April 2019
Comment 1 Xisco Faulí 2019-04-11 18:26:54 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: 040a54d89e8ca33171e86647ced8dc58efd85fbe
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Buovjaga 2019-04-11 18:39:21 UTC
I also repro bug 123694, even though it was fixed last month. My profile was reset yesterday.
Comment 3 raal 2019-04-12 05:20:15 UTC
No repro with Version: 6.3.0.0.alpha0+
Build ID: 31ac398cfa30694b18240d31df17a58d699b5bf6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Comment 4 Xisco Faulí 2019-04-12 09:28:03 UTC
@buovjaga, could you please attach a backtrace ?
Comment 5 Buovjaga 2019-04-12 09:51:44 UTC
(In reply to Xisco Faulí from comment #4)
> @buovjaga, could you please attach a backtrace ?

Yes, as soon as my full build without gold linker finishes. Arch still hasn't shipped the latest binutils, so I have no other option but to drop gold linker.
Comment 6 Buovjaga 2019-04-12 15:59:47 UTC
Created attachment 150715 [details]
Backtrace of crash

I did a make distclean, got rid of gold linker and now I can produce useful traces again.

Now it crashes already when clicking the range picker button, don't even have to paint cells.

Version: 6.3.0.0.alpha0+
Build ID: 03b3562a91c54e0c1b77982e1ca391b1131ac3c2
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Comment 7 Xisco Faulí 2019-04-13 07:53:44 UTC
Hi Caolán, this issue is similar to bug 123694 which was fixed by you.
Could you please take a look at the traces uploaded by buovjaga to see if something relevant comes out..
Comment 8 Commit Notification 2019-04-13 16:03:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9030ffb1a1b282eb2c6d1773930b0de0d42df447%5E%21

Resolves: tdf#124693 Crash modifying chart data range with mouse selection

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2019-04-13 18:01:46 UTC
Nice one, no crash anymore!

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 9030ffb1a1b282eb2c6d1773930b0de0d42df447
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 13 April 2019
Comment 10 Xisco Faulí 2019-04-15 10:42:48 UTC
Hi Caolán, does it need to be backported to libreoffice-6-2 ? I tried but I got a merge conflict...
Comment 11 Caolán McNamara 2019-04-15 18:39:47 UTC
I don't think this affects 6-2, so I don't think it needs a backport