Resolves: tdf#124693 Crash modifying chart data range with mouse selection

Change-Id: I95c621615c197687552147b8328c769fdd47befa